--- a/suit_rental/suit_rental/doctype/measurement_type/measurement_type.json
+++ b/suit_rental/suit_rental/doctype/measurement_type/measurement_type.json
@@ -29,7 +29,7 @@
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-08-23 19:49:22.319312",
+ "modified": "2025-09-13 13:52:25.201940",
  "modified_by": "Administrator",
  "module": "Suit Rental",
  "name": "Measurement Type",
@@ -45,6 +45,30 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Suit Rental User",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Suit Rental Manager",
    "share": 1,
    "write": 1
   }
