--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,13 @@
-
 name: CI
 
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
 
 concurrency:
-  group: develop-suit_rental-${{ github.event.number }}
+  group: main-suit_rental-${{ github.event.number }}
   cancel-in-progress: true
 
 jobs:
@@ -42,7 +41,7 @@ jobs:
       - name: Find tests
         run: |
           echo "Finding tests"
-          grep -rn "def test" > /dev/null
+          grep -rn "def test" > /dev/null || echo "No tests found, skipping"
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -77,7 +76,9 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install MariaDB Client
-        run: sudo apt-get install mariadb-client-10.6
+        run: |
+          sudo apt update
+          sudo apt-get install mariadb-client
 
       - name: Setup
         run: |
@@ -89,9 +90,11 @@ jobs:
       - name: Install
         working-directory: /home/runner/frappe-bench
         run: |
+          bench get-app erpnext
           bench get-app suit_rental $GITHUB_WORKSPACE
           bench setup requirements --dev
           bench new-site --db-root-password root --admin-password admin test_site
+          bench --site test_site install-app erpnext
           bench --site test_site install-app suit_rental
           bench build
         env:
