--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
 
 concurrency:
@@ -12,113 +11,109 @@ concurrency:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
     name: Server
+    runs-on: ubuntu-latest
 
     services:
       redis-cache:
         image: redis:alpine
         ports:
           - 13000:6379
+
       redis-queue:
         image: redis:alpine
         ports:
           - 11000:6379
+
       mariadb:
         image: mariadb:10.6
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
-        options: --health-cmd="mariadb-admin ping" --health-interval=5s --health-timeout=2s --health-retries=3
+        options: >
+          --health-cmd="mariadb-admin ping"
+          --health-interval=5s
+          --health-timeout=2s
+          --health-retries=3
 
     steps:
-      - name: Clone
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Find tests
-        run: |
-          echo "Finding tests"
-          grep -rn "def test" > /dev/null || echo "No tests found, skipping"
-
+      # -----------------------------
+      # Python 3.11 (MANDATORY)
+      # -----------------------------
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.11"
 
+      - name: Verify Python
+        run: |
+          python --version
+          which python
+          python3.11 --version
+
+      # -----------------------------
+      # Node
+      # -----------------------------
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          check-latest: true
 
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt', '**/pyproject.toml', '**/setup.py', '**/setup.cfg') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache yarn
-        uses: actions/cache@v4
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
+      # -----------------------------
+      # System deps
+      # -----------------------------
       - name: Install MariaDB Client
         run: |
           sudo apt update
           sudo apt-get install -y mariadb-client
 
-      - name: Setup Bench (Frappe v15)
+      # -----------------------------
+      # Bench init (FORCED 3.11)
+      # -----------------------------
+      - name: Setup Bench
         run: |
           pip install frappe-bench
-          bench init --skip-redis-config-generation --skip-assets --python "$(which python)" --frappe-branch version-15 ~/frappe-bench
-          mariadb --host 127.0.0.1 --port 3306 -u root -proot -e "SET GLOBAL character_set_server = 'utf8mb4'"
-          mariadb --host 127.0.0.1 --port 3306 -u root -proot -e "SET GLOBAL collation_server = 'utf8mb4_unicode_ci'"
+          bench init \
+            --skip-redis-config-generation \
+            --skip-assets \
+            --python python3.11 \
+            --frappe-branch version-15 \
+            ~/frappe-bench
 
-      - name: Install Apps (ERPNext v15)
+          mariadb -h 127.0.0.1 -P 3306 -u root -proot -e \
+            "SET GLOBAL character_set_server = 'utf8mb4'"
+
+          mariadb -h 127.0.0.1 -P 3306 -u root -proot -e \
+            "SET GLOBAL collation_server = 'utf8mb4_unicode_ci'"
+
+      # -----------------------------
+      # Apps
+      # -----------------------------
+      - name: Install Apps
         working-directory: /home/runner/frappe-bench
+        env:
+          CI: "Yes"
         run: |
           bench get-app erpnext --branch version-15
           bench get-app suit_rental $GITHUB_WORKSPACE
           bench setup requirements --dev
-          bench new-site --db-root-password root --admin-password admin test_site
+
+          bench new-site test_site \
+            --db-root-password root \
+            --admin-password admin
+
           bench --site test_site install-app erpnext
           bench --site test_site install-app suit_rental
-          bench build --app erpnext --app suit_rental
-        env:
-          CI: 'Yes'
+          bench build
 
-      - name: Prepare for Tests (Create Missing Warehouse Type - Transit)
-        working-directory: /home/runner/frappe-bench
-        run: |
-          bench --site test_site console <<'EOF'
-          import frappe
-          if not frappe.db.exists("Warehouse Type", "Transit"):
-              doc = frappe.get_doc({
-                  "doctype": "Warehouse Type",
-                  "warehouse_type_name": "Transit"
-              })
-              doc.insert(ignore_permissions=True, ignore_mandatory=True)
-              frappe.db.commit()
-          EOF
-
+      # -----------------------------
+      # Tests
+      # -----------------------------
       - name: Run Tests
         working-directory: /home/runner/frappe-bench
         run: |
           bench --site test_site set-config allow_tests true
           bench --site test_site run-tests --app suit_rental
-        env:
-          TYPE: server
