--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
 concurrency:
@@ -11,109 +12,100 @@ concurrency:
 
 jobs:
   tests:
-    name: Server
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    name: Server
 
     services:
       redis-cache:
         image: redis:alpine
         ports:
           - 13000:6379
-
       redis-queue:
         image: redis:alpine
         ports:
           - 11000:6379
-
       mariadb:
         image: mariadb:10.6
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
-        options: >
-          --health-cmd="mariadb-admin ping"
-          --health-interval=5s
-          --health-timeout=2s
-          --health-retries=3
+        options: --health-cmd="mariadb-admin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Clone
+        uses: actions/checkout@v3
 
-      # -----------------------------
-      # Python 3.11 (MANDATORY)
-      # -----------------------------
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Verify Python
+      - name: Find tests
         run: |
-          python --version
-          which python
-          python3.11 --version
+          echo "Finding tests"
+          grep -rn "def test" > /dev/null || echo "No tests found, skipping"
 
-      # -----------------------------
-      # Node
-      # -----------------------------
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          check-latest: true
 
-      # -----------------------------
-      # System deps
-      # -----------------------------
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt', '**/pyproject.toml', '**/setup.py', '**/setup.cfg') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            ${{ runner.os }}-
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache yarn
+        uses: actions/cache@v4
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install MariaDB Client
         run: |
           sudo apt update
           sudo apt-get install -y mariadb-client
 
-      # -----------------------------
-      # Bench init (FORCED 3.11)
-      # -----------------------------
-      - name: Setup Bench
+      - name: Setup Bench (Frappe v15)
         run: |
           pip install frappe-bench
-          bench init \
-            --skip-redis-config-generation \
-            --skip-assets \
-            --python python3.11 \
-            --frappe-branch version-15 \
-            ~/frappe-bench
+          bench init --skip-redis-config-generation --skip-assets --python "$(which python)" --frappe-branch version-15 ~/frappe-bench
+          mariadb --host 127.0.0.1 --port 3306 -u root -proot -e "SET GLOBAL character_set_server = 'utf8mb4'"
+          mariadb --host 127.0.0.1 --port 3306 -u root -proot -e "SET GLOBAL collation_server = 'utf8mb4_unicode_ci'"
 
-          mariadb -h 127.0.0.1 -P 3306 -u root -proot -e \
-            "SET GLOBAL character_set_server = 'utf8mb4'"
-
-          mariadb -h 127.0.0.1 -P 3306 -u root -proot -e \
-            "SET GLOBAL collation_server = 'utf8mb4_unicode_ci'"
-
-      # -----------------------------
-      # Apps
-      # -----------------------------
-      - name: Install Apps
-        working-directory: /home/runner/frappe-bench
-        env:
-          CI: "Yes"
+      - name: Install Apps (ERPNext v15)
+        working-directory: ~/frappe-bench
         run: |
           bench get-app erpnext --branch version-15
           bench get-app suit_rental $GITHUB_WORKSPACE
           bench setup requirements --dev
-
-          bench new-site test_site \
-            --db-root-password root \
-            --admin-password admin
-
+          bench new-site --db-root-password root --admin-password admin test_site
           bench --site test_site install-app erpnext
           bench --site test_site install-app suit_rental
-          bench build
+          bench build --app erpnext --app suit_rental
+        env:
+          CI: 'Yes'
 
-      # -----------------------------
-      # Tests
-      # -----------------------------
       - name: Run Tests
-        working-directory: /home/runner/frappe-bench
+        working-directory: ~/frappe-bench
         run: |
           bench --site test_site set-config allow_tests true
           bench --site test_site run-tests --app suit_rental
+        env:
+          TYPE: server
+          
